--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
