--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".InfoWallApplication">
         <activity
-            android:name=".TileOverview.MainActivity"
+            android:name=".TileOverview.TileOverview"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +25,11 @@
         <activity
             android:name=".BlackBoard.BlackBoard"
             android:label="@string/title_activity_black_board"
-            android:parentActivityName=".TileOverview.MainActivity"
+            android:parentActivityName=".TileOverview.TileOverview"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".TileOverview.MainActivity" />
+                android:value=".TileOverview.TileOverview" />
         </activity>
     </application>
 
