--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             android:name=".TileOverview.TileOverview"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".Login.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
