--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.google.code.gson:gson:1.7.2'
+    compile "com.google.android.gms:play-services:8.1.0"
 
 }
