--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -6,12 +6,24 @@
     <!-- Permission: Writing to SDCard -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".InfoWallApplication">
+
+        <service
+            android:name="wipraktikum.informationwallandroidapp.gcm.GcmListener"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
         <activity
             android:name=".TileOverview.TileOverview"
             android:label="@string/app_name"
