--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.google.code.gson:gson:1.7.2'
     compile "com.google.android.gms:play-services:8.1.0"
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.parse:parse-android:1.+'
 
 }
