--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -6,9 +6,20 @@
     <!-- Permission: Writing to SDCard -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+
+    <permission
+        android:name="wipraktikum.informationwallandroidapp.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="wipraktikum.informationwallandroidapp.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -51,6 +62,35 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".TileOverview.TileOverview" />
         </activity>
+
+        <!-- Added for Parse push notifications -->
+
+        <service android:name="com.parse.PushService" />
+
+        <receiver
+            android:name=".Receiver.PushNotificationReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <!-- IMPORTANT: Change "info.androidhive.parsenotifications" to match your app's package name. -->
+                <category android:name="wipraktikum.informationwallandroidapp" />
+            </intent-filter>
+        </receiver>
+
+        <!-- /Added for Parse push notifications -->
     </application>
 
 </manifest>
