--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile "com.google.android.gms:play-services:8.1.0"
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
+    compile 'com.android.support:cardview-v7:22.0.+'
+    compile 'com.android.support:recyclerview-v7:22.0.+'
 
 }
