--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.parse:parse-android:1.+'
     compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.0.+'
-
+    compile 'org.apache.commons:commons-io:1.3.2'
 }
