--- a/InformationWallAndroidApp/app/build.gradle
+++ b/InformationWallAndroidApp/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.0.+'
     compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'com.android.support:support-v4:22.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar" //https://github.com/daimajia/AndroidSwipeLayout/wiki/SwipeAdapter
 }
