--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:label="@string/title_activity_base" >
         </activity>
         <activity
-            android:name=".BlackBoard.BlackBoard"
+            android:name=".Blackboard.BlackBoard"
             android:label="@string/title_activity_black_board"
             android:parentActivityName=".TileOverview.TileOverview"
             android:theme="@style/AppTheme.NoActionBar" >
@@ -62,6 +62,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="*/*" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".FeedReader.FeedReader"
+            android:label="@string/activity_feed_reader_title"
+            android:parentActivityName=".TileOverview.TileOverview"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TileOverview.TileOverview" />
         </activity>
 
         <activity
