--- a/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
+++ b/InformationWallAndroidApp/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:label="@string/title_activity_base" >
         </activity>
         <activity
-            android:name=".Blackboard.Blackboard"
+            android:name=".BlackBoard.Blackboard"
             android:label="@string/title_activity_black_board"
             android:parentActivityName=".TileOverview.TileOverview"
             android:theme="@style/AppTheme.NoActionBar" >
